--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <div class="destination" id="paris">
                 <h2>Paris</h2>
             </div>
+
+            <div class="destination" id="tanta">
+                <h2>Tanta</h2>
+            </div>
         </div>
     </div>
 
